2004-06-14  Alexander Malysh  <a.malysh@centrium.de> 
    * configure, configure.in, gw-config.h.in: added check for <semaphore.h>
    * gwlib/semaphore.c: added support for native semaphore.

2004-06-14  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/bb_boxc.c: added tracking of pending messages between smsbox <-> bearerbox.
    * gwlib/cfg.def doc/userguide/userguide.xml: added new config option
      'smsbox-max-pending'. See userguide for description.

2004-06-14  Alexander Malysh  <a.malysh@centrium.de> 
    * gwlib/gwlib.h: added "gw-rwlock.h".
    * gw/bb_boxc.c: changed 'boxc' to 'Counter'.
      Switched 'list_[lock|unlock](smsbox_list)' to rwlock's.
      Added panic if multiple equal smsbox routes defined.

2004-06-10  Alexander Malysh  <a.malysh@centrium.de> 
    * gwlib/gw-rwlock.[ch]: initial version of the wrapper for
      reader/writer lock. For now only pthread_rw_lock is supported.

2004-06-10  Alexander Malysh  <a.malysh@centrium.de> 
    * gwlib/regex.c: fixed memleak.

2004-06-10  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/dlr_mem.c: fixed race condition.

2004-06-10  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/bb_alog.c, gw/bearerbox.[ch]: added const identifier. Rewrite of
      costom log format handling (performance). Fixed memleak.

2004-06-10  Alexander Malysh  <a.malysh@centrium.de> 
    * doc/userguide/userguide.xml, gw/smsc/smsc_cimd2.c: added ability to set PID for
      MT messages in CIMD2.
      Thanks to "Arne K. Haaje" <haaje (at) eurobate.com> for the patch.
      [Msg-Id: <200406101430.29450.haaje@eurobate.com>].

2004-06-09  Alexander Malysh  <a.malysh@centrium.de> 
    * gwlib/counter.c: cleanup. Got rid of #ifdef's.
 
2004-06-09  Alexander Malysh  <a.malysh@centrium.de> 
    * gw/dlr_pgsql.c, gw/dlr.c, gw/dlr_p.h, gwlib/cfg.def, doc/userguide/userguide.xml:
      added PostgreSQL native DLR support. This is not tested yet. Code partially picked
      from SQLBox patch.
